Tritao: DB Authentication History with lock, unlock, and all history.